test/compile-errors/name-not-found.crow
r record
	f t
	h arr x

u union
	t

foo t()
	x
	a y
	a z b
